// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`infobar reducers execute action 1`] = `
{
  "_internal": {
    "loading": {},
  },
  "pendingActionsCallbacks": [
    {
      "callback": undefined,
      "id": "shopifyRefundShippingCostOfOrder-34-5-f086fd149f679a11cf4d5378daa3a994cd70689a",
    },
  ],
  "picture": {
    "email": null,
    "url": null,
  },
}
`;

exports[`infobar reducers execute action 2`] = `
{
  "_internal": {
    "loading": {},
  },
  "pendingActionsCallbacks": [
    {
      "callback": [MockFunction],
      "id": "shopifyRefundShippingCostOfOrder-34-5-f086fd149f679a11cf4d5378daa3a994cd70689a",
    },
  ],
  "picture": {
    "email": null,
    "url": null,
  },
}
`;

exports[`infobar reducers execute action 3`] = `
{
  "_internal": {
    "loading": {},
  },
  "pendingActionsCallbacks": [],
  "picture": {
    "email": null,
    "url": null,
  },
}
`;

exports[`infobar reducers execute action 4`] = `
{
  "_internal": {
    "loading": {},
  },
  "pendingActionsCallbacks": [],
  "picture": {
    "email": null,
    "url": null,
  },
}
`;
